--- a/index.html
+++ b/index.html
@@ -3,12 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Academia La Católica</title>
     <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/font.css">
     <link rel="stylesheet" href="/node_modules/animate.css/animate.min.css">
     <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.min.css">
+
+    <link rel="shortcut icon" href="/icons/LOGOCLC-azul.png" type="image/x-icon">
 </head>
 <body>
+    <header class="relative">
+        <div id="sliders" class="swiper h-screen relative">
+            <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
+            <div class="swiper-wrapper">
+                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-1.jpg" alt="Slider relacionado a la natación">
+                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-2.jpg" alt="Slider relacionado a la natación">
+                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-3.jpg" alt="Slider relacionado a la natación">
+                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-4.jpg" alt="Slider relacionado a la natación">
+                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-5.jpg" alt="Slider relacionado a la natación">
+            </div>
+        </div>
+        <div class="fixed top-5 left-0 z-30 w-full flex items-center justify-between px-20">
+            <img class="w-24" src="/icons/LOGOCLC-blanco.png" alt="Logo de la Acadeémia La Católica">
+            <nav>
+                <img class="hidden" src="/icons/menu.png" alt="Icono de la barra del menú">
+                <ul class="flex gap-10">
+                    <li class="hidden">
+                        <img src="/icons/equis.png" alt="">
+                    </li>
+                    <a class="font-bree_regular text-white" href="#">
+                        <li>Inicio</li>
+                    </a>
+                    <a class="font-bree_regular text-white" href="#">
+                        <li>Somos</li>
+                    </a>
+                    <a class="font-bree_regular text-white" href="#">
+                        <li>Nestro Compromiso</li>
+                    </a>
+                    <a class="font-bree_regular text-white" href="#">
+                        <li>Contáctanos</li>
+                    </a>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <script src="/node_modules/swiper/swiper-bundle.min.js"></script>
+    <script src="/js/slider.js"></script>
 </body>
 </html>
