Pestaña Inicio listo pararevisar

--- a/index.html
+++ b/index.html
@@ -14,17 +14,41 @@
 <body>
     <header class="relative">
         <div id="sliders" class="swiper h-screen relative">
-            <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
             <div class="swiper-wrapper">
-                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-1.jpg" alt="Slider relacionado a la natación">
-                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-2.jpg" alt="Slider relacionado a la natación">
-                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-3.jpg" alt="Slider relacionado a la natación">
-                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-4.jpg" alt="Slider relacionado a la natación">
-                <img class="swiper-slide w-full h-full object-cover" src="/images/slider-5.jpg" alt="Slider relacionado a la natación">
+                <div class="swiper-slide">
+                    <img class="w-full h-full object-cover" src="/images/slider-4.jpg" alt="Slider relacionado a la natación">
+                    <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
+                    <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center px-25% gap-2">
+                        <h1 class="font-helvetic text-8xl mb-8">NATACIÓN</h1>
+                        <h2 class="font-bree_bold text-5xl text-verde_catolica">¡Sumérgete en la diversión!</h2>
+                        <p class="font-bree_regular text-base text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p>
+                        <button class="bg-verde_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-verde_catolica hover:bg-transparent hover:cursor-pointer transition duration-500">CONTÁCTANOS</button>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <img class="w-full h-full object-cover" src="/images/ballet_1.jpg" alt="Slider relacionado al ballet">
+                    <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
+                    <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center px-25% gap-2">
+                        <h1 class="font-helvetic text-8xl mb-8">BALLET</h1>
+                        <h2 class="font-bree_bold text-5xl text-amarillo_catolica">Haz de cada movimiento una obra maestra</h2>
+                        <p class="font-bree_regular text-base text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p>
+                        <button class="bg-amarillo_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-amarillo_catolica hover:bg-transparent hover:cursor-pointer transition duration-500">CONTÁCTANOS</button>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <img class="w-full h-full object-cover" src="/images/teatro_niños_1.jpg" alt="Slider relacionado al teatro">
+                    <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
+                    <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center px-25% gap-2">
+                        <h1 class="font-helvetic text-8xl mb-8">TEATRO</h1>
+                        <h2 class="font-bree_bold text-5xl text-azul_catolica">Haz del escenario tu lugar de expresión</h2>
+                        <p class="font-bree_regular text-base text-gray-300">En el teatro, convierte el escenario en tu espacio personal para expresar emociones y creatividad, mostrando tu verdadero talento y capturando la esencia de cada papel</p>
+                        <button class="bg-azul_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500">CONTÁCTANOS</button>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="fixed top-5 left-0 z-30 w-full flex items-center justify-between px-20">
-            <img class="w-24" src="/icons/LOGOCLC-blanco.png" alt="Logo de la Acadeémia La Católica">
+        <div class="fixed top-5 left-0 z-30 w-full flex items-center justify-between px-24">
+            <img class="w-24" src="/icons/LOGOCLC-azul.png" alt="Logo de la Acadeémia La Católica">
             <nav>
                 <img class="hidden" src="/icons/menu.png" alt="Icono de la barra del menú">
                 <ul class="flex gap-10">
@@ -38,7 +62,10 @@
                         <li>Somos</li>
                     </a>
                     <a class="font-bree_regular text-white" href="#">
-                        <li>Nestro Compromiso</li>
+                        <li>Nuestro Compromiso</li>
+                    </a>
+                    <a class="font-bree_regular text-white" href="#">
+                        <li>Talleres</li>
                     </a>
                     <a class="font-bree_regular text-white" href="#">
                         <li>Contáctanos</li>
@@ -46,6 +73,11 @@
                 </ul>
             </nav>
         </div>
+        <ul class="absolute right-8 top-0 z-50 h-full flex flex-col justify-center gap-6">
+            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="w-6" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
+            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="w-6" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
+            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="w-6" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
+        </ul>
     </header>
     <script src="/node_modules/swiper/swiper-bundle.min.js"></script>
     <script src="/js/slider.js"></script>
