--- a/index.html
+++ b/index.html
@@ -16,67 +16,95 @@
         <div id="sliders" class="swiper h-screen relative">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img class="w-full h-full object-cover" src="/images/slider-4.jpg" alt="Slider relacionado a la natación">
+                    <img class="w-full h-full object-cover" src="/images/natacion-slider.jpg" alt="Slider relacionado a la natación">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center px-25% gap-2">
-                        <h1 class="font-helvetic text-8xl mb-8">NATACIÓN</h1>
-                        <h2 class="font-bree_bold text-5xl text-verde_catolica">¡Sumérgete en la diversión!</h2>
-                        <p class="font-bree_regular text-base text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p>
-                        <button class="bg-verde_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-verde_catolica hover:bg-transparent hover:cursor-pointer transition duration-500">CONTÁCTANOS</button>
+                        <h1 class="font-helvetic 1260px:text-8xl 940px:text-7xl mb-8">NATACIÓN</h1>
+                        <h2 class="font-bree_bold 1260px:text-5xl 940px:text-4xl text-verde_catolica">¡Sumérgete en la diversión!</h2>
+                        <p class="font-bree_regular 1260px:text-base 940px:text-sm text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p>
+                        <button class="bg-verde_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-verde_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm">CONTÁCTANOS</button>
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <img class="w-full h-full object-cover" src="/images/ballet_1.jpg" alt="Slider relacionado al ballet">
+                    <img class="w-full h-full object-cover" src="/images/ballet-slider.jpg" alt="Slider relacionado al ballet">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center px-25% gap-2">
-                        <h1 class="font-helvetic text-8xl mb-8">BALLET</h1>
-                        <h2 class="font-bree_bold text-5xl text-amarillo_catolica">Haz de cada movimiento una obra maestra</h2>
-                        <p class="font-bree_regular text-base text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p>
-                        <button class="bg-amarillo_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-amarillo_catolica hover:bg-transparent hover:cursor-pointer transition duration-500">CONTÁCTANOS</button>
+                        <h1 class="font-helvetic 1260px:text-8xl 940px:text-7xl mb-8">BALLET</h1>
+                        <h2 class="font-bree_bold 1260px:text-5xl 940px:text-4xl text-amarillo_catolica">Haz de cada movimiento una obra maestra</h2>
+                        <p class="font-bree_regular 1260px:text-base 940px:text-sm text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p>
+                        <button class="bg-amarillo_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-amarillo_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm">CONTÁCTANOS</button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <img class="w-full h-full object-cover" src="/images/teatro_niños_1.jpg" alt="Slider relacionado al teatro">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center px-25% gap-2">
-                        <h1 class="font-helvetic text-8xl mb-8">TEATRO</h1>
-                        <h2 class="font-bree_bold text-5xl text-azul_catolica">Haz del escenario tu lugar de expresión</h2>
-                        <p class="font-bree_regular text-base text-gray-300">En el teatro, convierte el escenario en tu espacio personal para expresar emociones y creatividad, mostrando tu verdadero talento y capturando la esencia de cada papel</p>
-                        <button class="bg-azul_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500">CONTÁCTANOS</button>
+                        <h1 class="font-helvetic 1260px:text-8xl 940px:text-7xl mb-8">TEATRO</h1>
+                        <h2 class="font-bree_bold 1260px:text-5xl 940px:text-4xl text-azul_catolica">Haz del escenario tu lugar de expresión</h2>
+                        <p class="font-bree_regular 1260px:text-base 940px:text-sm text-gray-300">En el teatro, convierte el escenario en tu espacio personal para expresar emociones y creatividad, mostrando tu verdadero talento y capturando la esencia de cada papel</p>
+                        <button class="bg-azul_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm">CONTÁCTANOS</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="fixed top-5 left-0 z-30 w-full flex items-center justify-between px-24">
-            <img class="w-24" src="/icons/LOGOCLC-azul.png" alt="Logo de la Acadeémia La Católica">
-            <nav>
+        <div class="fixed top-5 540px:top-0 540px:pt-5 left-0 z-30 w-full flex items-center justify-between px-24 940px:px-14 540px:px-4">
+            <img class="1260px:w-24 940px:w-20 540px:w-14" src="/icons/LOGOCLC-azul.png" alt="Logo de la Acadeémia La Católica">
+            <nav class="540px:hidden 940px:inline-block">
                 <img class="hidden" src="/icons/menu.png" alt="Icono de la barra del menú">
-                <ul class="flex gap-10">
+                <ul class="flex gap-3">
                     <li class="hidden">
                         <img src="/icons/equis.png" alt="">
                     </li>
-                    <a class="font-bree_regular text-white" href="#">
-                        <li>Inicio</li>
+                    <a class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Inicio</li>
                     </a>
-                    <a class="font-bree_regular text-white" href="#">
-                        <li>Somos</li>
+                    <a class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Somos</li>
                     </a>
-                    <a class="font-bree_regular text-white" href="#">
-                        <li>Nuestro Compromiso</li>
+                    <a class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Nuestro Compromiso</li>
                     </a>
-                    <a class="font-bree_regular text-white" href="#">
-                        <li>Talleres</li>
+                    <a class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Talleres</li>
                     </a>
-                    <a class="font-bree_regular text-white" href="#">
-                        <li>Contáctanos</li>
+                    <a class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Contáctanos</li>
                     </a>
                 </ul>
             </nav>
+            <nav class="940px:hidden absolute bg-white opacity-95 left-0 w-screen h-screen bottom-full"><!-- Cambiar el bottom-full por top-0 -->
+                <img class="hidden" src="/icons/menu.png" alt="Icono de la barra del menú">
+                <ul class="flex flex-col gap-7 items-center h-full justify-center">
+                    <li class="absolute w-7 right-5 top-5">
+                        <img src="/icons/equis.png" alt="Icono de X para cerrar el menú">
+                    </li>
+                    <a class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Inicio</li>
+                    </a>
+                    <a class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Somos</li>
+                    </a>
+                    <a class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Nuestro Compromiso</li>
+                    </a>
+                    <a class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Talleres</li>
+                    </a>
+                    <a class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Contáctanos</li>
+                    </a>
+                </ul>
+                <ul class="absolute right-0 bottom-16 z-50 flex w-full justify-center gap-4">
+                    <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/facebook-negro.png" alt="Icono de Facebook"></li></a>
+                    <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/whatsapp-negro.png" alt="Icono de Whatsapp"></li></a>
+                    <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-gray-300"><img class="w-7" src="/icons/instagram-negro.png" alt="Icono de Instagram"></li></a>
+                </ul>
+            </nav>
         </div>
-        <ul class="absolute right-8 top-0 z-50 h-full flex flex-col justify-center gap-6">
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="w-6" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="w-6" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
-            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="w-6" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
+        <ul class="540px:hidden absolute right-8 top-0 z-50 h-full flex flex-col justify-center gap-6">
+            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="1260px:w-6 540px:w-5" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
+            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="1260px:w-6 540px:w-5" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
+            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="1260px:w-6 540px:w-5" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
         </ul>
     </header>
     <script src="/node_modules/swiper/swiper-bundle.min.js"></script>
