corregido, aún falta terminar de diseñar en tamaño movil

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </ul>
             </nav>
         </div>
-        <ul class="540px:hidden absolute right-8 top-0 z-50 h-full flex flex-col justify-center gap-6">
+        <ul class="540px:hidden absolute right-8 top-0 z-50 h-full 940px:flex flex-col justify-center gap-6">
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="1260px:w-6 540px:w-5" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="1260px:w-6 540px:w-5" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="1260px:w-6 540px:w-5" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
