--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 </head>
 <body>
     <header class="relative">
-        <div id="sliders" class="swiper 1360px:h-screen 320px:h-850px relative">
+        <div id="sliders" class="swiper 1360px:h-screen 320px:h-650px relative">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <img class="w-full h-full object-cover" src="/images/natacion-slider.jpg" alt="Slider relacionado a la natación">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="font-helvetic 1360px:text-8xl 940px:text-7xl 940px:mb-8 320px:text-4xl 320px:-mt-36 940px:mt-0 320px:mb-32">NATACIÓN</h1>
-                        <h2 class="font-bree_bold 1360px:text-5xl 940px:text-4xl 320px:text-3xl text-verde_catolica">¡Sumérgete en la diversión!</h2>
+                        <h1 class="font-helvetic 1360px:text-8xl 940px:text-7xl 940px:mb-8 320px:text-4xl 940px:mt-0">NATACIÓN</h1>
+                        <h2 class="font-bree_bold 1360px:text-5xl 940px:text-4xl 320px:text-3xl text-azul_catolica 320px:mt-10">¡Sumérgete en la diversión!</h2>
                         <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">Vive una experiencia alegre y emocionante mientras aprendes a nadar. Las clases están diseñadas para combinar el aprendizaje con la diversión en cada sesión</p>
-                        <button class="bg-verde_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-verde_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs">CONTÁCTANOS</button>
+                        <button class="bg-azul_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs">CONTÁCTANOS</button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <img class="w-full h-full object-cover" src="/images/ballet-slider.jpg" alt="Slider relacionado al ballet">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="font-helvetic 1360px:text-8xl 940px:text-7xl 940px:mb-8 320px:text-4xl 320px:-mt-36 940px:mt-0 320px:mb-32">BALLET</h1>
-                        <h2 class="font-bree_bold 1360px:text-5xl 940px:text-4xl 320px:text-3xl text-amarillo_catolica">Haz de cada movimiento una obra maestra</h2>
+                        <h1 class="font-helvetic 1360px:text-8xl 940px:text-7xl 940px:mb-8 320px:text-4xl 940px:mt-0">BALLET</h1>
+                        <h2 class="font-bree_bold 1360px:text-5xl 940px:text-4xl 320px:text-3xl text-amarillo_catolica 320px:mt-10">Haz de cada movimiento una obra maestra</h2>
                         <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">En el ballet, perfecciona cada paso y técnica para transformar cada movimiento en una expresión artística única y elegante, elevando tu danza a un nivel superior.</p>
                         <button class="bg-amarillo_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-amarillo_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs">CONTÁCTANOS</button>
                     </div>
@@ -39,10 +39,10 @@
                     <img class="w-full h-full object-cover" src="/images/teatro_niños_1.jpg" alt="Slider relacionado al teatro">
                     <div class="absolute top-0 left-0 bg-black z-20 w-full h-full opacity-50"></div>
                     <div class="z-50 absolute top-0 left-0 text-white w-full h-full text-center flex flex-col justify-center items-center 940px:px-25% 320px:px-5% gap-2">
-                        <h1 class="font-helvetic 1360px:text-8xl 940px:text-7xl 940px:mb-8 320px:text-4xl 320px:-mt-36 940px:mt-0 320px:mb-32">TEATRO</h1>
-                        <h2 class="font-bree_bold 1360px:text-5xl 940px:text-4xl 320px:text-3xl text-azul_catolica">Haz del escenario tu lugar de expresión</h2>
+                        <h1 class="font-helvetic 1360px:text-8xl 940px:text-7xl 940px:mb-8 320px:text-4xl 940px:mt-0">TEATRO</h1>
+                        <h2 class="font-bree_bold 1360px:text-5xl 940px:text-4xl 320px:text-3xl text-verde_catolica 320px:mt-10">Haz del escenario tu lugar de expresión</h2>
                         <p class="font-bree_regular 1360px:text-base 320px:text-sm  text-gray-300">En el teatro, convierte el escenario en tu espacio personal para expresar emociones y creatividad, mostrando tu verdadero talento y capturando la esencia de cada papel</p>
-                        <button class="bg-azul_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-azul_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs">CONTÁCTANOS</button>
+                        <button class="bg-verde_catolica px-10 py-1 rounded-md mt-10 font-bree_regular outline outline-1 outline-verde_catolica hover:bg-transparent hover:cursor-pointer transition duration-500 1260px:text-base 940px:text-sm 320px:text-xs">CONTÁCTANOS</button>
                     </div>
                 </div>
             </div>
