cambios y header finalizado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="relative">
-        <div id="sliders" class="swiper 1360px:h-screen 320px:h-650px relative">
+        <div id="sliders" class="swiper 1360px:h-screen 940px:h-723px 320px:h-550px relative">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <img class="w-full h-full object-cover" src="/images/natacion-slider.jpg" alt="Slider relacionado a la natación">
@@ -47,11 +47,11 @@
                 </div>
             </div>
         </div>
-        <div class="fixed top-5 320px:top-0 940px:py-5 320px:py-3 left-0 z-30 w-full flex items-center justify-between px-24 1260px:px-24 940px:px-14 320px:px-4 940px:bg-transparent 320px:bg-white">
-            <img class="1360px:w-20 940px:w-16 940px:inline-block 320px:hidden" src="/icons/LOGOCLC-azul.png" alt="Logo de la Acadeémia La Católica">
-            <img class="940px:hidden 320px:inline-block 320px:w-16" src="/icons/ICONO-LOGO.png" alt="Icono de la Academia Católica">
-            <img id="barra_menu" class="940px:hidden 320px:w-8" src="/icons/menu.png" alt="Icono de la barra del menú">
-            <nav class="320px:hidden 940px:inline-block">
+        <div class="fixed top-5 320px:top-0 820px:py-5 320px:py-3 left-0 z-30 w-full flex items-center justify-between px-24 1260px:px-24 820px:px-14 320px:px-4 820px:bg-transparent 320px:bg-white">
+            <img class="1360px:w-20 820px:w-16 820px:inline-block 320px:hidden" src="/icons/LOGOCLC-azul.png" alt="Logo de la Acadeémia La Católica">
+            <img class="820px:hidden 320px:inline-block 320px:w-16" src="/icons/ICONO-LOGO.png" alt="Icono de la Academia Católica">
+            <img id="barra_menu" class="820px:hidden 320px:w-8" src="/icons/menu.png" alt="Icono de la barra del menú">
+            <nav class="320px:hidden 820px:inline-block">
                 <img class="hidden" src="/icons/menu.png" alt="Icono de la barra del menú">
                 <ul class="flex gap-3">
                     <li class="hidden">
@@ -74,7 +74,7 @@
                     </a>
                 </ul>
             </nav>
-            <nav id="nav_movil" class="940px:hidden absolute bg-white opacity-95 left-0 w-screen h-screen bottom-full"><!-- Cambiar el bottom-full por top-0 -->
+            <nav id="nav_movil" class="820px:hidden absolute bg-white opacity-95 left-0 w-screen h-screen bottom-full"><!-- Cambiar el bottom-full por top-0 -->
                 <ul class="flex flex-col gap-7 items-center h-full justify-center">
                     <li id="icono_cerrar_nav" class="absolute w-7 right-5 top-5">
                         <img src="/icons/equis.png" alt="Icono de X para cerrar el menú">
@@ -102,7 +102,7 @@
                 </ul>
             </nav>
         </div>
-        <ul class="320px:hidden absolute right-8 top-0 z-50 h-full 940px:flex flex-col justify-center gap-6">
+        <ul class="320px:hidden absolute right-8 top-0 z-50 h-full 820px:flex flex-col justify-center gap-6">
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="1260px:w-6 540px:w-5" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="1260px:w-6 540px:w-5" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="1260px:w-6 540px:w-5" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
