--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                         <li class="">Inicio</li>
                     </a>
                     <a class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
-                        <li class="">Somos</li>
+                        <li class="">Nosotros</li>
                     </a>
                     <a class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
-                        <li class="">Nuestro Compromiso</li>
+                        <li class="">Noticias</li>
                     </a>
                     <a class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
                         <li class="">Talleres</li>
@@ -83,10 +83,10 @@
                         <li class="">Inicio</li>
                     </a>
                     <a class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
-                        <li class="">Somos</li>
+                        <li class="">Nosotros</li>
                     </a>
                     <a class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
-                        <li class="">Nuestro Compromiso</li>
+                        <li class="">Noticias</li>
                     </a>
                     <a class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
                         <li class="">Talleres</li>
