Diseño movil del apartado nosotros terminado

--- a/index.html
+++ b/index.html
@@ -108,6 +108,43 @@
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="1260px:w-6 540px:w-5" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
         </ul>
     </header>
+
+    <main>
+        <section id="nosotros" class="320px:my-10 320px:mx-5">
+            <h2 class="320px:text-3xl 320px:font-helvetic 320px:text-azul_catolica 320px:text-center 320px:mb-3">Nosotros</h2>
+            <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px">¡Bienvenido a nuestra academia La Católica! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Únete y descubre un lugar donde cada clase es una oportunidad para brillar. ¡Tu viaje comienza aquí!</p>
+            <div class="320px:my-5">
+                <h3 class="320px:font-helvetic 320px:text-verde_catolica 320px:mb-3 320px:text-lg">Nuestros Docentes</h3>
+                <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:mb-6">Conoce a nuestro equipo de profesores, apasionados expertos en natación, teatro y ballet. Su dedicación inspira a cada estudiante a explorar y desarrollar su talento. ¡Prepárate para un viaje artístico emocionante!</p>
+                <div class="320px:flex 320px:flex-wrap 320px:gap-8 320px:justify-center">
+                    <div class="">
+                        <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3">
+                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Alexia.jpg" alt="Fotografia del docente de Natación">
+                        </div>
+                        <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg">Alexia Fernández</h4>
+                        <h4 class="320px:text-amarillo_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2">Profesora de Natación</h4>
+                        <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-64 320px:text-center">Ella es Alexia, maestra de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
+                    </div>
+                    <div class="">
+                        <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3">
+                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Sofia.jpg" alt="Fotografia del docente de Ballet">
+                        </div>
+                        <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg">Sofía Quispe</h4>
+                        <h4 class="320px:text-amarillo_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2">Profesora de Ballet</h4>
+                        <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-64 320px:text-center">Conoce a Sofía, profesora de ballet apasionada. Su técnica inspira a los alumnos a desarrollar gracia y disciplina en un entorno motivador y acogedor.</p>
+                    </div>
+                    <div class="">
+                        <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3">
+                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-full" src="/images/Martin.jpg" alt="Fotografia del docente de Teatro">
+                        </div>
+                        <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg">Martín Flores</h4>
+                        <h4 class="320px:text-amarillo_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2">Profesor de Teatro</h4>
+                        <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-64 320px:text-center">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="/node_modules/swiper/swiper-bundle.min.js"></script>
     <script src="/js/slider.js"></script>
     <script src="/js/nav.js"></script>
