--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <h2 class="320px:text-3xl 320px:font-helvetic 320px:text-azul_catolica 320px:text-center 320px:mb-3">Nosotros</h2>
             <p class="320px:text-gris_catolica_letra 320px:font-bree_regular 320px:text-center 320px:text-15px">¡Bienvenido a nuestra academia La Católica! Ofrecemos clases de natación, teatro y ballet en un entorno inspirador y lleno de energía. Fomentamos el desarrollo personal y artístico de nuestros estudiantes, creando una comunidad apasionada que celebra el talento y la creatividad. Únete y descubre un lugar donde cada clase es una oportunidad para brillar. ¡Tu viaje comienza aquí!</p>
             <div class="320px:my-5">
-                <h3 class="320px:font-helvetic 320px:text-verde_catolica 320px:mb-3 320px:text-lg">Nuestros Docentes</h3>
+                <h3 class="320px:font-helvetic 320px:text-azul_catolica 320px:mb-3 320px:text-lg">Nuestros Docentes</h3>
                 <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:mb-6">Conoce a nuestro equipo de profesores, apasionados expertos en natación, teatro y ballet. Su dedicación inspira a cada estudiante a explorar y desarrollar su talento. ¡Prepárate para un viaje artístico emocionante!</p>
                 <div class="320px:flex 320px:flex-wrap 320px:gap-8 320px:justify-center">
                     <div class="">
